feat: Progress class

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <h1 class="wrapper__title">Progress</h1>
     <div class="wrapper__progress">
       <div class="progress-container">
-        <div class="progress"></div>
       </div>
     </div>
     <div class="wrapper__controls controls">
@@ -33,5 +32,7 @@
       </div>
     </div>
   </div>
+
+  <script src="./js/progress.js"></script>
 </body>
 </html>
