feat: controls handlers

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <span class="controls__label">Value</span>
       </label>
       <label class="switch controls__item">
-        <input type="checkbox" class="switch__input">
+        <input type="checkbox" class="switch__input" id="animateInput">
         <span class="switch__slider controls-input"></span>
         <span class="controls__label">Animate</span>
       </label>
       <label class="switch controls__item">
-        <input type="checkbox" class="switch__input">
+        <input type="checkbox" class="switch__input" id="hideInput">
         <span class="switch__slider controls-input"></span>
         <span class="controls__label">Hide</span>
       </label>
@@ -33,6 +33,6 @@
     </div>
   </div>
 
-  <script src="./js/progress.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 </html>
